tests/ui/error-codes/E0646.rs
fn main() where (): Copy {} //~ ERROR [E0646]
